# setup-podman-lab

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  check.sh  noxfile.py  pyproject.toml  ruff.toml  setup-podman-lab.sh
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  epic.yml  feature_request.md  feature_request.yml  task.yml
.github/workflows/: ci.yml  label-sync.yml  pr-body-lint.yml  pre-commit.yml  release-please.yml  release.yml  title-lint.yml
completions/: setup-podman-lab.bash  setup-podman-lab.fish  setup-podman-lab.zsh
docs/: BRANCH_PROTECTION.md  CONTAINER_CHANGES.md  GIT_SETUP_GUIDE.md  NETWORKING.md  RELEASING.md  api.md  architecture.md  contributing.md
lib/: components.sh  logging.sh  runtime.sh  templates.sh  version.sh
scripts/: smoke.sh  verify-lab.sh  verify-openvas.sh
src/: setup-podman-lab.sh
src/lib/: networking.sh  templates.sh
src/setup_podman_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cli.py
